--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -8,7 +8,10 @@ body {
   font-family: "Gill Sans", "Helvetica Neue", sans-serif;
   background: #fffff3;
   color: black;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 1.3; }
 
 *, *:after, *:before {
   box-sizing: border-box; }
@@ -20,7 +23,7 @@ body {
 
 .sections {
   padding: 20px;
-  width: 900px;
+  width: 800px;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
@@ -29,21 +32,34 @@ body {
   padding-bottom: 20px;
   border-bottom: 1px solid red;
   margin-bottom: 20px; }
-  .section img {
+
+.section[data-type="image"] {
+  text-align: center; }
+  .section[data-type="image"] img {
     max-width: 100%; }
 
-h1 {
-  font-size: 35px;
-  font-style: italic;
+h1, h2, h3 {
   color: red;
+  font-style: italic;
   font-weight: normal;
-  letter-spacing: 1px; }
+  letter-spacing: 0.03em;
+  text-align: center; }
+
+h1 {
+  font-size: 35px; }
+
+h2 {
+  font-size: 30px; }
+
+h3 {
+  font-size: 25px; }
 
 p {
-  font-weight: 300;
-  margin: 20px auto 0;
-  font-size: 20px;
-  line-height: 1.3; }
+  margin: 0 auto 20px;
+  width: 500px;
+  max-width: 100%; }
+  p:last-child {
+    margin-bottom: 0; }
 
 .drag-helper {
   display: none;
