--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -1,10 +1,8 @@
-html, body {
-  overflow: hidden;
-  height: 100%;
-  margin: 0;
-  padding: 0; }
+*, *:after, *:before {
+  box-sizing: border-box; }
 
 body {
+  margin: 0;
   font-family: "Gill Sans", "Helvetica Neue", sans-serif;
   background: #fffff3;
   color: black;
@@ -12,14 +10,6 @@ body {
   font-weight: 300;
   font-size: 20px;
   line-height: 1.3; }
-
-*, *:after, *:before {
-  box-sizing: border-box; }
-
-.page-scroll {
-  overflow: scroll;
-  height: 100%;
-  width: 100%; }
 
 .sections {
   padding: 20px;
@@ -29,9 +19,46 @@ body {
   margin-right: auto; }
 
 .section {
-  padding-bottom: 20px;
-  border-bottom: 1px solid red;
-  margin-bottom: 20px; }
+  position: relative;
+  padding: 20px 0;
+  border: 1px solid red;
+  border-left: 0;
+  border-right: 0;
+  margin-top: -1px; }
+  .section:first-child {
+    border-top-width: 0; }
+  .section:last-child {
+    border-bottom-width: 0; }
+  .section.ui-sortable-helper:first-child {
+    border-top-width: 1px; }
+  .section.ui-sortable-helper:last-child {
+    border-bottom-width: 1px; }
+  .section .section-helpers {
+    display: none; }
+    .section .section-helpers .section-drag-handle {
+      display: -moz-inline-stack;
+      display: inline-block;
+      vertical-align: middle;
+      *vertical-align: auto;
+      zoom: 1;
+      *display: inline;
+      position: absolute;
+      top: -1px;
+      left: 0;
+      opacity: 0;
+      transition: opacity 0.4s; }
+  .section:hover .section-helpers {
+    display: block; }
+    .section:hover .section-helpers .section-drag-handle {
+      padding: 20px;
+      opacity: 1;
+      background: red;
+      color: white;
+      text-align: center;
+      cursor: move; }
+      .section:hover .section-helpers .section-drag-handle:before {
+        content: "Reorder";
+        text-transform: uppercase; }
 
 .section[data-type="image"] {
   text-align: center; }
