--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -1,10 +1,10 @@
-html, body
-    overflow: hidden
-    height: 100%
-    margin: 0
-    padding: 0
+@import compass/css3
+
+*, *:after, *:before
+    box-sizing: border-box
 
 body
+    margin: 0
     font-family: "Gill Sans", "Helvetica Neue", sans-serif
     background: #fffff3
     color: #000
@@ -14,14 +14,6 @@ body
     font-size: 20px
     line-height: 1.3
 
-*, *:after, *:before
-    box-sizing: border-box
-
-.page-scroll
-    overflow: scroll
-    height: 100%
-    width: 100%
-
 .sections
     padding: 20px
     width: 800px
@@ -30,9 +22,54 @@ body
     margin-right: auto
 
 .section
-    padding-bottom: 20px
-    border-bottom: 1px solid red
-    margin-bottom: 20px
+    position: relative
+    padding: 20px 0
+    border: 1px solid red
+    border-left: 0
+    border-right: 0
+    margin-top: -1px
+
+    &:first-child
+        border-top-width: 0
+
+    &:last-child
+        border-bottom-width: 0
+
+    &.ui-sortable-helper
+
+        &:first-child
+            border-top-width: 1px
+
+        &:last-child
+            border-bottom-width: 1px
+
+    .section-helpers
+        display: none
+
+        .section-drag-handle
+            +inline-block
+            position: absolute
+            top: -1px
+            left: 0
+            opacity: 0
+            transition: opacity .4s
+
+    &:hover
+
+        .section-helpers
+            display: block
+
+            .section-drag-handle
+                padding: 20px
+                opacity: 1
+                background: red
+                color: #fff
+                text-align: center
+                cursor: move
+
+                &:before
+                    content: "Reorder"
+                    text-transform: uppercase
 
 .section[data-type="image"]
     text-align: center
