--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -36,6 +36,7 @@ body
         border-bottom-width: 0
 
     &.ui-sortable-helper
+        background: rgba(255, 255, 243, 0.8)
 
         &:first-child
             border-top-width: 1px
