--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -125,3 +125,18 @@ body.dragover .drag-helper
     font-size: 28px
     text-align: center
     width: 100%
+
+.axis
+    path,
+    line
+        fill: none
+        stroke: #000
+        shape-rendering: crispEdges
+
+.x.axis path
+    display: none
+
+.line
+    fill: none
+    stroke: steelblue
+    stroke-width: 1.5px
