Add section button

--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -126,9 +126,21 @@ body.dragover .drag-helper
     text-align: center
     width: 100%
 
+.add-section
+    margin: 20px auto
+    width: 200px
+    cursor: pointer
+    padding: 20px
+    background: red
+    color: #fff
+    text-align: center
+
+    &:before
+        content: "Add content"
+        text-transform: uppercase
+
 .axis
-    path,
-    line
+    path, line
         fill: none
         stroke: #000
         shape-rendering: crispEdges
