--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -114,8 +114,19 @@ body.dragover .drag-helper {
   text-align: center;
   width: 100%; }
 
-.axis path,
-.axis line {
+.add-section {
+  margin: 20px auto;
+  width: 200px;
+  cursor: pointer;
+  padding: 20px;
+  background: red;
+  color: white;
+  text-align: center; }
+  .add-section:before {
+    content: "Add content";
+    text-transform: uppercase; }
+
+.axis path, .axis line {
   fill: none;
   stroke: black;
   shape-rendering: crispEdges; }
