--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -152,3 +152,11 @@ body.dragover .drag-helper
     fill: none
     stroke: steelblue
     stroke-width: 1.5px
+
+.chart
+    svg
+        display: inline-block
+    table
+        display: inline-block
+        vertical-align: top
+        margin-right: 25px
