--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -16,18 +16,28 @@ body
 
 .sections
     padding: 20px
-    width: 800px
+    width: 900px
     max-width: 100%
     margin-left: auto
     margin-right: auto
 
 .section
+    transition: opacity .3s
     position: relative
     padding: 20px 0
     border: 1px solid red
-    border-left: 0
-    border-right: 0
+    border-left-color: transparent
+    border-right-color: transparent
     margin-top: -1px
+
+    &:hover
+        border-color: red
+        box-shadow: 0 0 0 2px red
+
+    &[contenteditable]:focus
+        outline: none
+        border-color: red
+        box-shadow: 0 0 0 2px red
 
     &:first-child
         border-top-width: 0
@@ -55,6 +65,13 @@ body
             opacity: 0
             transition: opacity .4s
 
+    .section-caption
+        font-size: 15px
+        width: 300px
+        position: absolute
+        top: 20px
+        right: 0
+
     &:hover
 
         .section-helpers
@@ -78,6 +95,12 @@ body
     img
         max-width: 100%
 
+.section[data-type="text"]
+
+    .section-content
+        width: 500px
+        max-width: 100%
+
 h1, h2, h3
     color: red
     font-style: italic
@@ -95,9 +118,8 @@ h3
     font-size: 25px
 
 p
-    margin: 0 auto 20px
-    width: 500px
-    max-width: 100%
+    margin-top: 0
+    margin-bottom: 20px
 
     &:last-child
         margin-bottom: 0
@@ -138,6 +160,14 @@ body.dragover .drag-helper
     &:before
         content: "Add content"
         text-transform: uppercase
+
+body.section-focused
+
+    .section:not(:focus)
+        opacity: 0.3
+
+        &:hover
+            opacity: 1
 
 .axis
     path, line
