--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -9,11 +9,12 @@ body {
   -webkit-font-smoothing: antialiased;
   font-weight: 300;
   font-size: 20px;
-  line-height: 1.3; }
+  line-height: 1.3;
+  min-width: 1050px; }
 
 .sections {
   padding: 20px;
-  width: 900px;
+  width: 1050px;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
@@ -26,6 +27,8 @@ body {
   border-left-color: transparent;
   border-right-color: transparent;
   margin-top: -1px; }
+  .section .section-content {
+    margin-left: 150px; }
   .section:hover {
     border-color: red;
     box-shadow: 0 0 0 2px red; }
@@ -56,6 +59,8 @@ body {
       position: absolute;
       top: -1px;
       left: 0;
+      height: 65px;
+      width: 130px;
       opacity: 0;
       background: red;
       color: white;
@@ -74,8 +79,10 @@ body {
       *display: inline;
       cursor: pointer;
       position: absolute;
-      top: -1px;
-      right: 0;
+      top: 66px;
+      left: 0;
+      height: 65px;
+      width: 130px;
       opacity: 0;
       background: red;
       color: white;
