--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -14,9 +14,11 @@ body
     font-size: 20px
     line-height: 1.3
 
+    min-width: 1050px
+
 .sections
     padding: 20px
-    width: 900px
+    width: 1050px
     max-width: 100%
     margin-left: auto
     margin-right: auto
@@ -29,6 +31,9 @@ body
     border-left-color: transparent
     border-right-color: transparent
     margin-top: -1px
+
+    .section-content
+        margin-left: 150px
 
     &:hover
         border-color: red
@@ -63,6 +68,8 @@ body
             position: absolute
             top: -1px
             left: 0
+            height: 65px
+            width: 130px
             opacity: 0
             background: red
             color: #fff
@@ -78,8 +85,10 @@ body
             +inline-block
             cursor: pointer
             position: absolute
-            top: -1px
-            right: 0
+            top: 66px
+            left: 0
+            height: 65px
+            width: 130px
             opacity: 0
             background: red
             color: #fff
