Section min-height

--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -20,6 +20,7 @@ body {
   margin-right: auto; }
 
 .section {
+  min-height: 132px;
   transition: opacity 0.3s;
   position: relative;
   padding: 20px 0;
