--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -24,6 +24,7 @@ body
     margin-right: auto
 
 .section
+    min-height: 132px
     transition: opacity .3s
     position: relative
     padding: 20px 0
