Lighter section border colors

--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -28,7 +28,7 @@ body
     transition: opacity .3s
     position: relative
     padding: 20px 0
-    border: 1px solid red
+    border: 1px solid rgba(255, 0, 0, 0.06)
     border-left-color: transparent
     border-right-color: transparent
     margin-top: -1px
