--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -134,12 +134,14 @@ body
             opacity: .5
 
 .section[data-type="image"]
-    text-align: center
 
-    img
-        max-width: 100%
+    .section-content
+        text-align: center
 
-.section[data-type="text"]
+        img
+            max-width: 100%
+
+.section[data-type="text"], .section[data-type="image"]
 
     .section-content
         width: 500px
