--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -12,6 +12,23 @@ body {
   line-height: 1.3;
   min-width: 1050px; }
 
+.button {
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  zoom: 1;
+  *display: inline;
+  cursor: pointer;
+  font-weight: normal;
+  padding: 13px 19px 12px;
+  font-size: 16px;
+  background: red;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.05em; }
+
 .sections {
   padding: 20px;
   width: 1050px;
@@ -23,7 +40,7 @@ body {
 
 .section .section-inner {
   margin-left: 150px;
-  min-height: 132px;
+  min-height: 91px;
   transition: opacity 0.3s;
   position: relative;
   padding: 20px 0;
@@ -52,52 +69,23 @@ body {
   .section.ui-sortable-helper:last-child .section-inner {
     border-bottom-width: 1px; }
 .section .section-helpers {
-  height: 0;
-  overflow: hidden; }
-  .section .section-helpers .section-drag-handle {
-    display: -moz-inline-stack;
-    display: inline-block;
-    vertical-align: middle;
-    *vertical-align: auto;
-    zoom: 1;
-    *display: inline;
-    position: absolute;
-    top: -1px;
-    left: 0;
-    height: 65px;
+  display: none;
+  overflow: hidden;
+  position: absolute;
+  top: -1px;
+  left: 0; }
+  .section .section-helpers * {
+    margin-bottom: 1px;
     width: 130px;
-    opacity: 0;
-    background: red;
-    color: white;
-    text-align: center;
-    padding: 20px;
+    display: block; }
+  .section .section-helpers .section-drag-handle {
     cursor: move; }
     .section .section-helpers .section-drag-handle:before {
-      content: "Reorder";
-      text-transform: uppercase; }
-  .section .section-helpers .section-delete {
-    display: -moz-inline-stack;
-    display: inline-block;
-    vertical-align: middle;
-    *vertical-align: auto;
-    zoom: 1;
-    *display: inline;
-    cursor: pointer;
-    position: absolute;
-    top: 66px;
-    left: 0;
-    height: 65px;
-    width: 130px;
-    opacity: 0;
-    background: red;
-    color: white;
-    text-align: center;
-    padding: 20px; }
-    .section .section-helpers .section-delete:before {
-      content: "Remove";
-      text-transform: uppercase; }
+      content: "Reorder"; }
+  .section .section-helpers .section-delete:before {
+    content: "Remove"; }
 .section .section-caption {
-  font-size: 15px;
+  font-size: 17px;
   width: 300px;
   position: absolute;
   top: 20px;
@@ -105,16 +93,14 @@ body {
   .section .section-caption.medium-editor-placeholder:after {
     opacity: 0; }
 .section:hover .section-helpers {
-  height: auto;
-  overflow: visible; }
-  .section:hover .section-helpers .section-drag-handle, .section:hover .section-helpers .section-delete {
-    opacity: 1; }
+  display: block; }
 .section:hover .section-caption.medium-editor-placeholder:after {
   opacity: 0.5; }
 
 .section[data-type="image"] .section-content {
   text-align: center; }
   .section[data-type="image"] .section-content img {
+    pointer-events: none;
     max-width: 100%; }
 
 .section[data-type="text"] .section-content, .section[data-type="image"] .section-content, .section[data-type="graph"] .section-content {
@@ -179,20 +165,12 @@ body.dragover .drag-helper {
   margin-bottom: 20px; }
 
 .add-section {
-  display: -moz-inline-stack;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
-  zoom: 1;
-  *display: inline;
-  cursor: pointer;
-  padding: 20px;
-  background: red;
-  color: white;
-  text-align: center; }
-  .add-section:before {
-    content: "Add " attr(data-type);
-    text-transform: uppercase; }
+  margin-right: 1px; }
+  .add-section:last-child {
+    margin-right: 0; }
+
+.add-section:before {
+  content: "Add " attr(data-type); }
 
 body.section-focused .section:not(.section-focused) {
   opacity: 0.3; }
