--- a/unpacked-extension/sass/style.sass
+++ b/unpacked-extension/sass/style.sass
@@ -69,19 +69,19 @@ body
                 outline: none
 
     &:first-child .section-inner
-        border-top-width: 0
+        border-top-color: transparent
 
     &:last-child .section-inner
-        border-bottom-width: 0
+        border-bottom-color: transparent
 
     &.ui-sortable-helper, &:hover
         background: rgba(255, 255, 243, 0.8)
 
         &:first-child .section-inner
-            border-top-width: 1px
+            border-top-color: red
 
         &:last-child .section-inner
-            border-bottom-width: 1px
+            border-bottom-color: red
 
     .section-helpers
         display: none
