--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,5 @@
 @import compass/css3
+@import compass/utilities/general/clearfix
 
 *, *:after, *:before
     box-sizing: border-box
@@ -6,94 +7,61 @@
 body
     margin: 0
     font-family: "Gill Sans", "Helvetica Neue", sans-serif
-    background: #fffff3
-    color: #000
+    background: #000
+    color: #fff
     -webkit-font-smoothing: antialiased
 
     font-weight: 300
     font-size: 20px
     line-height: 1.3
+    letter-spacing: .03em
 
     min-width: 1200px
 
-.button
-    +inline-block
-    cursor: pointer
-    font-weight: normal
-    padding: 13px 19px 12px
-    font-size: 16px
-    background: red
-    color: #fff
-    text-align: center
-    text-transform: uppercase
-    letter-spacing: .05em
-
 .sections
-    padding: 20px
-    width: 1050px
-    width: 1200px
-    padding-right: 170px
+    background: #fff
+    color: #000
+
+    padding: 20px 0
+    width: 1000px
     max-width: 100%
     margin-left: auto
     margin-right: auto
 
 .section
+    position: relative
 
     .section-inner
-        margin-left: 150px
-
-        min-height: 91px
+        +pie-clearfix
+        margin: 0 auto
+        width: 850px
+        padding: 0 20px 20px
+        min-height: 150px
         transition: opacity .3s
-        position: relative
-        padding: 20px 0
-        border: 1px solid rgba(255, 0, 0, 0.06)
-        border-left-color: transparent
-        border-right-color: transparent
-        margin-top: -1px
-
-    .section-content
-        margin-left: 0
 
     &:hover .section-inner, &.section-focused .section-inner
-        margin-left: 0
-
-        border-color: red
-        box-shadow: 0 0 0 2px red
-
-        .section-content
-            margin-left: 150px
 
         .section-content, .section-caption
 
             &:focus
                 outline: none
 
-    &:first-child .section-inner
-        border-top-color: transparent
-
-    &:last-child .section-inner
-        border-bottom-color: transparent
-
-    &.ui-sortable-helper, &:hover
-        background: rgba(255, 255, 243, 0.8)
-
-        &:first-child .section-inner
-            border-top-color: red
-
-        &:last-child .section-inner
-            border-bottom-color: red
-
     .section-helpers
-        display: none
         overflow: hidden
         position: absolute
         top: 0
-        left: 0
+        bottom: 0
+        right: 100%
+        opacity: 0
 
-        *
+        div
             margin-bottom: 1px
-            width: 130px
+            padding-right: 20px
             display: block
+            text-align: right
+            color: #fff
+            margin-bottom: 10px
+            font-weight: normal
 
         .section-drag-handle
             cursor: move
@@ -107,9 +75,7 @@ body
     .section-caption
         font-size: 17px
         width: 300px
-        position: absolute
-        top: 20px
-        right: 0
+        float: right
 
         &.medium-editor-placeholder:after
             opacity: 0
@@ -117,10 +83,16 @@ body
     &:hover
 
         .section-helpers
-            display: block
+            opacity: 1
 
         .section-caption.medium-editor-placeholder:after
             opacity: .5
+
+    &.ui-sortable-helper
+        background: rgba(255, 255, 255, 0.8)
+
+        .section-helpers
+            opacity: 1
 
 .section[data-type="image"]
 
@@ -135,6 +107,7 @@ body
 
     .section-content
         width: 500px
+        float: left
         max-width: 100%
         overflow: hidden
 
@@ -143,11 +116,10 @@ body
     .section-caption
         display: none
 
-h1, h2, h3
-    color: red
-    font-style: italic
+h1, h2, h3, h4, h5, h6
     font-weight: normal
-    letter-spacing: .03em
+
+h1
     text-align: center
 
 h1
@@ -197,16 +169,18 @@ body.dragover .drag-helper
 
 .add
     text-align: center
-    margin-bottom: 20px
+    margin: 20px
 
 .add-section
-    margin-right: 1px
+    padding: 13px 19px 12px
+    font-weight: normal
+    cursor: pointer
+    background: #000
+    color: #fff
+    text-align: center
 
-    &:last-child
-        margin-right: 0
-
-.add-section:before
-    content: "Add " attr(data-type)
+    &:before
+        content: "Add content"
 
 body.section-focused
 
